--- a/indexStyle.css
+++ b/indexStyle.css
@@ -8,6 +8,7 @@ body {
 h2 {
     font-size: 1.4em;
     font-family: 'Kumlien SC','Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    text-decoration: underline;
 }
 h1 {
     font-size: 3em;
@@ -15,22 +16,33 @@ h1 {
 hr {
     border-top: 1px solid lightgray
 }
-#workExperience {
+#workExperience, .portfolio {
     display: block;
     background-color: lightgray;
     border: solid 3px darkblue;
+    width: 50%;
+    justify-content: center;
+}
+#workExperience h2, .portfolio h2 {
+    text-align: center;
 }
 #headerBar {
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: lightsteelblue;
+    background-color: #333;
   }
+
   
 .menu {
     float: left;
   }
+
+.page {
+    display:flex;
+    justify-content: center;
+}
   
 .menuItem {
     display: block;
@@ -43,4 +55,16 @@ hr {
   /* Change the link color to #111 (black) on hover */
   .menuItem:hover {
     background-color: #111;
+  }
+
+  /* Tablet Styles*/
+  @media only screen and (min-width: 401px) and (max-width: 960px) {
+      .page{
+          flex-direction: column;
+          align-items: center;
+      }
+      #workExperience, .portfolio {
+          width: 100%;
+      }
+      
   }
